# AI-NativeV2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Historias de Usuario.md  Makefile  README.md  contexto.md  dev.config.json  docker-compose.prod.yml  empate3.docx  env.example  guia_desarrollo.md  metodologia_github.md  package-lock.json  package.json  plan_implementacion_ainative.docx  playwright.config.ts  prompt_auditoria.md  scaffold-decisions.yaml  scaffold-manifest.yaml  tutor1.docx
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schemas_and_outbox.py  002_base_domain_models.py  003_enrollments.py  004_exercises.py  005_activities_llm_rag.py  006_add_mistral_provider.py  007_add_exercise_rubric.py  008_submissions_snapshots.py  009_add_tutor_interactions_and_system_prompts.py  010_add_governance_events.py  011_add_reflections.py  012_add_cognitive_tables.py  013_add_cognitive_metrics_and_reasoning_records.py  014_add_risk_assessments.py  015_add_coherence_columns.py  016_add_gemini_provider.py  017_add_n4_level_and_score_breakdown.py  018_create_cognitive_reports.py  019_thesis_alignment_columns.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: event_bus.py  exceptions.py  logging.py  outbox_worker.py  security.py
backend/rubrics/: n4_anexo_b.yaml
backend/scripts/: epic20_demo.py
backend/tests/: conftest.py
backend/tests/adversarial/: test_tutor_guardrails.py
backend/tests/integration/: test_auth.py  (+6 more)
(+547 files in other folders)
